# Hexweave

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: ast.hpp  common.hpp  environment.hpp  interpreter.hpp  lexer.hpp  parser.hpp  token.hpp  value.hpp
src/: ast.cpp  common.cpp  environment.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp  value.cpp
test/: delete_test.hex  full_test.hex  main.hex  map_test.hex  syntax_error.hex  test.hex
test/modules/: module1.hex
